--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,15 +35,30 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:name=".utils.MyApplication"
+        android:theme="@style/DayTheme">
 
         <activity android:name=".activity.MainActivity">
 
         </activity>
-        <activity android:name=".activity.LT.BombActivity">
+        <activity android:name=".activity.LT.SideslipActivity"
+            android:theme="@style/DayTheme">
 
         </activity>
-        <activity android:name=".activity.LT.SideslipActivity">
+        <activity android:name=".activity.LT.SettingActivity"
+           >
+
+        </activity>
+        <activity android:name=".activity.LT.LoginActivity">
+
+        </activity>
+        <activity android:name=".activity.LT.RegiseterActivity">
+
+        </activity>
+        <activity android:name=".activity.LT.OpinionActivity">
+
+        </activity>
+        <activity android:name=".utils.CehuaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -52,7 +67,22 @@
         </activity>
         <service android:name="com.amap.api.location.APSService"></service>
         <meta-data android:name="com.amap.api.v2.apikey" android:value="411177445d986c36939801c490141b74"/>
+        <activity
+            android:name="com.tencent.tauth.AuthActivity"
+            android:noHistory="true"
+            android:launchMode="singleTask" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="tencent1105627007" />
+            </intent-filter>
+        </activity>
 
+        <activity android:name="com.tencent.connect.common.AssistActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            />
     </application>
 
 </manifest>
