--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,11 @@ android {
         }
     }
 }
-
+repositories{
+    flatDir{
+        dirs 'libs' //就是你放aar的目录地址
+    }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -29,7 +33,12 @@ dependencies {
     //3.5.0：请务必查看下面注释[1]
     //添加数据需要的
     compile 'cn.bmob.android:bmob-sdk:3.5.0'
+    compile name: 'SMSSDK-2.1.1', ext: 'aar'
+    compile name: 'SMSSDKGUI-2.1.1', ext: 'aar'
     compile files('libs/mta-sdk-1.6.2.jar')
     compile files('libs/nineoldandroids-2.4.0.jar')
+    compile files('libs/MobCommons-2016.0714.1402.jar')
+
+
 }
 
